--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Video reader",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --config webpack.production.config.js --progress --profile --colors",
+    "start": "webpack-dev-server --progress --profile --colors"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,30 @@
   "bugs": {
     "url": "https://github.com/MariuszWitkowski/video-reader/issues"
   },
-  "homepage": "https://github.com/MariuszWitkowski/video-reader#readme"
+  "homepage": "https://github.com/MariuszWitkowski/video-reader#readme",
+  "dependencies": {
+    "react": "15.3.2",
+    "react-dom": "15.3.2"
+  },
+  "devDependencies": {
+    "babel-core": "6.17.0",
+    "babel-loader": "6.2.7",
+    "babel-plugin-transform-class-properties": "^6.16.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "6.16.0",
+    "babel-preset-react": "6.16.0",
+    "babel-runtime": "^6.11.6",
+    "css-loader": "0.25.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "0.9.0",
+    "html-webpack-plugin": "2.24.1",
+    "postcss-loader": "^1.0.0",
+    "react-hot-loader": "^3.0.0-beta.6",
+    "style-loader": "0.13.1",
+    "url-loader": "0.5.7",
+    "webpack": "1.13.3",
+    "webpack-cleanup-plugin": "^0.4.1",
+    "webpack-dev-server": "1.16.2"
+  }
 }
